# mcp2

./: main.py  pyproject.toml  requirements.txt
server/: client.py  weather.json  weather.py
